# pos

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop.yml  win7.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/migrations/: 0001_init.sql  0002_seed.sql  0003_hash_pins.sql  0004_seed_modifiers.sql  0005_modifier_groups.sql  0006_french_mru.sql  0007_users_rbac.sql
backend/src/: error.rs  handlers.rs  main.rs  models.rs
docs/: DECISIONS.md  DESKTOP.md  guide-demarrage.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_seed.sql  0003_menu_adalya.sql
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  Icon.tsx  Login.tsx  Modal.tsx  NavRail.tsx  Toast.tsx
src/components/cashier/: CashierScreen.tsx  CategoryChips.tsx  CheckPanel.tsx  Facture.tsx  MenuPanel.tsx  ModifierModal.tsx  OpenChecksBar.tsx  OrderLineRow.tsx  PayModal.tsx  ReasonModal.tsx  ZoneTabs.tsx
src/components/products/: ProductsManager.tsx
src/components/reports/: ReportsScreen.tsx
src/components/roster/: ShiftAssignmentManager.tsx
src/components/setup/: ui.tsx  (+1 more)
src/data/: seed.ts
src/lib/: accent.ts  api.ts  apiHttp.ts  apiSqlite.ts  apiTypes.ts  totals.ts  util.ts
src/store/: toast.ts  useStore.ts
src/types/: domain.ts
win7/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
win7/.cargo/: config.toml
win7/src/: db.rs  main.rs
win7/ui/: app.slint
(+4 files in other folders)
