[package]
name = "caisse-win7"
version = "0.1.0"
edition = "2021"
description = "Caisse — Café Adalya (native Windows 7 build, Slint + embedded SQLite)"

[dependencies]
# Software renderer + winit backend → no GPU/WebView2, runs on old Windows 7 hardware.
slint = { version = "1.8", default-features = false, features = ["std", "backend-winit", "renderer-software", "compat-1-2"] }
# Bundled SQLite compiled from source → self-contained, no system dependency.
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = "s"
lto = true
strip = true
